Командный баннер, ссылка отзывов.

--- a/app/homeapp/templates/homeapp/includes/banner_ulsk.html
+++ b/app/homeapp/templates/homeapp/includes/banner_ulsk.html
@@ -5,13 +5,13 @@
       <div class="banner__text">
         <h5>Филиал МКА «Партнер Групп» в г.Ульяновске</h5>
         <h2 class="banner__title">Минимизируем правовые риски для Вас и вашего бизнеса!</h2>
-        <ul class="banner__list">
-          <li>Уголовно-правовая защита по делам об экономических и коррупционных преступлениях.</li>
-          <li>Защита деловой репутации в суде.</li>
-          <li>Арбитражная практика.</li>
+        <ul class="banner__list" >
+          <li style="padding-left: 0;">Уголовно-правовая защита по делам об экономических и коррупционных преступлениях.</li>
+          <li style="padding-left: 0;">Защита деловой репутации в суде.</li>
+          <li style="padding-left: 0;">Арбитражная практика.</li>
         </ul>
         <div class="banner__text" style="max-width:none;margin-bottom:0.75rem;margin-top:1.5rem;">
-          Руководитель филиала МКА «Партнер Групп» в г.Ульяновске и Ульяновской области, адвокат
+          Руководитель<br>филиала МКА «Партнер Групп» в г.Ульяновске и Ульяновской области, адвокат
           <br />
           <span style="font-size:1.75em;font-weight:700;">Борзиков Андрей Анатольевич</span>
         </div>
